[package]
name = "ctxgen"
version = "0.2.3"
edition = "2021"
description = "Generate AGENTS.md and CLAUDE.md from .context folder"
license = "MIT"
repository = "https://github.com/andrewhannigan/ctxgen"
homepage = "https://github.com/andrewhannigan/ctxgen"
keywords = ["cli", "context", "ai-agents", "markdown"]
categories = ["command-line-utilities"]
authors = ["Andrew Hannigan"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
regex = "1.10"
anyhow = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

